<resources>
    <string name="app_name">BLE-Monitor</string>
    <string name="ble_not_supported">Seems like your device doesn\'t support BLE!</string>
    <string name="activate_bluetooth">Please activate Bluetooth before scanning</string>

    <!-- Menu Action Buttons  -->
    <string name="action_settings">Settings</string>
    <string name="action_ble_toggle">Bluetooth Switch</string>

    <!-- Navigation Drawer -->
    <string name="drawer_open">OPEN</string>
    <string name="drawer_closed">CLOSED</string>
    <string name="drawer_header_title">BLE - Monitor</string>
    <string name="drawer_header_subtitle">© Reutlingen University</string>
    <string name="drawer_logo_content_desc">BLE Monitor Logo</string>

    <!-- List View Dummy Values -->
    <string name="dummy_device">Dummy Device</string>
    <string name="_999db">-999db</string>
    <string name="dummy_uuid">xx:xx:xx:xx:xx:xx</string>
    <string name="dummy_disconnected">DISCONNECTED</string>
    <string name="dummy_bonded">NOT BONDED</string>
    <string name="dummy_company">Mocked Inc.</string>
    <string name="dummy_not_connectable">Not Connectable</string>
    <string name="dummy_services">Services (99)</string>
    <string name="hr_text_service">Services</string>
    <string name="dummy_service_identifier">Dummy Service Identifier</string>
    <string name="dummy_service_name">Dummy Service Name</string>
    <string name="dummy_legacy_scan">Legacy Scan: true</string>
    <string name="dummy_adv_interval">Adv. Interval: 1.25ms</string>
    <string name="dummy_timestamp">10-04-19 12:00:17</string>


    <!-- Property Labels -->
    <string name="service_name">Service Name:</string>
    <string name="service_uuid">Service UUID:</string>

    <!-- Service Detail View -->
    <string name="characteristic_read">Read</string>
    <string name="characteristic_write">Write</string>
    <string name="characteristic_notify">Notify</string>
    <string name="descriptors">Descriptors</string>
    <string name="service_identifier">Service Identifier</string>
    <string name="characteristic_identifier">Characteristic Identifier</string>


    <!-- Characteristic Detail View -->
    <string name="characteristic_uuid">Characteristic UUID:</string>
    <string name="characteristic_name">Characteristic Name:</string>
    <string name="descriptor_write">Write</string>
    <string name="descriptor_read">Read</string>

    <!-- Filter Entries -->
    <string-array name="FilterArray">
        <item>Verbose</item>
        <item>Debug</item>
        <item>Info</item>
        <item>Warning</item>
        <item>Error</item>
        <item>Fatal</item>
    </string-array>

    <!-- Protocol Entries -->
    <string-array name="ProtocolArray">
        <item>HCI</item>
        <item>L2CAP</item>
        <item>ATT</item>
    </string-array>

    <!-- HCI Type Entries -->
    <string-array name="HciTypeArray">
        <item>All</item>
        <item>Command</item>
        <item>Event</item>
        <item>ACL_Data</item>
        <item>SCO_Data</item>
    </string-array>

    <!-- ATT Type Entries -->
    <string-array name="AttTypeArray">
        <item>All</item>
        <item>Command</item>
        <item>Request</item>
        <item>Response</item>
        <item>Notification</item>
        <item>Indication</item>
        <item>Confirmation</item>
    </string-array>

    <!-- ATT Method Entries -->
    <string-array name="AttMethodArray">
        <item>ALL</item>
        <item>ATT_EXCHANGE_MTU</item>
        <item>ATT_ERROR</item>
        <item>ATT_FIND_INFORMATION</item>
        <item>ATT_READ</item>
        <item>ATT_WRITE</item>
        <item>ATT_READ_BY_TYPE</item>
        <item>ATT_READ_BY_GROUP_TYPE</item>
        <item>ATT_FIND_BY_TYPE_VALUE</item>
        <item>ATT_HANDLE_VALUE_NTF</item>
        <item>ATT_HANDLE_VALUE_IND</item>
        <item>ATT_SIGNED_WRITE_CMD</item>
        <item>ATT_READ_BLOB</item>
        <item>ATT_READ_MULTIPLE</item>
        <item>ATT_WRITE_CMD</item>
        <item>ATT_READ_MULTIPLE_VARIABLE</item>
        <item>ATT_PREPARE_WRITE</item>
        <item>ATT_EXECUTE_WRITE</item>
    </string-array>

    <string-array name="encodings">
        <item>Hex</item>
        <item>UTF-16</item>
    </string-array>
</resources>
