<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <TextView
        android:id="@+id/tv_service_item_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:paddingStart="10dp"
        android:text="@string/dummy_service_name" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_service_item_identifier"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingStart="10dp"
            android:text="@string/dummy_service_identifier"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/tv_service_item_uuid"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dummy_uuid"
            android:paddingStart="10dp"
            android:textSize="14sp" />
    </LinearLayout>

</LinearLayout>