<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:descendantFocusability="blocksDescendants">

    <include layout="@layout/activity_device_detail_service_list_item">
    </include>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView
            android:id="@+id/tv_descriptors"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:text="@string/descriptors"
            android:textStyle="bold" />
        <ListView
            android:id="@+id/lv_descriptors"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="2dp">

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:id="@+id/readBtn"
            android:layout_marginHorizontal="5dp"
            android:text="@string/characteristic_read"
            android:focusable="false"
            android:focusableInTouchMode="false">
        </Button>
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/writeBtn"
            android:layout_marginHorizontal="5dp"
            android:layout_weight="1"
            android:text="@string/characteristic_write"
            android:focusable="false"
            android:focusableInTouchMode="false">
        </Button>
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/notifyBtn"
            android:layout_marginHorizontal="5dp"
            android:layout_weight="1"
            android:text="@string/characteristic_notify"
            android:focusable="false"
            android:focusableInTouchMode="false">
        </Button>
    </LinearLayout>
</LinearLayout>