<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/linearLayout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#FFFFFF"
    android:descendantFocusability="blocksDescendants"
    android:orientation="vertical"
    android:paddingHorizontal="10dp"
    android:paddingVertical="5dp"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="#FFFFFF"
                app:srcCompat="@drawable/round_rss_feed_white_48"
                app:tint="@color/secondaryColor"
                />

            <TextView
                android:id="@+id/RSSI_TextView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_horizontal"
                android:text="@string/_999db"/>
        </LinearLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:paddingLeft="10dp"
                android:paddingTop="8dp"
                app:layout_constraintEnd_toStartOf="@+id/linearLayout3"
                app:layout_constraintStart_toStartOf="parent">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:orientation="horizontal"
                    android:paddingTop="1.5dp"
                    android:paddingBottom="1.5dp">

                    <ImageView
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        android:adjustViewBounds="true"
                        android:contentDescription="TODO"
                        android:scaleType="fitCenter"
                        android:src="@drawable/round_tap_and_play_white_48"
                        app:tint="@color/secondaryColor" />

                    <TextView
                        android:id="@+id/DeviceName_TextView"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="5dp"
                        android:ellipsize="start"
                        android:singleLine="true"
                        android:text="@string/dummy_device"
                        android:textStyle="bold" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:orientation="horizontal"
                    android:paddingTop="1.5dp"
                    android:paddingBottom="1.5dp">

                    <ImageView
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        android:adjustViewBounds="true"
                        android:scaleType="fitCenter"
                        android:src="@drawable/round_fingerprint_white_48"
                        app:tint="@color/secondaryColor" />

                    <TextView
                        android:id="@+id/DeviceUUID_TextView"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="5dp"
                        android:ellipsize="start"
                        android:singleLine="true"
                        android:text="@string/dummy_uuid"
                        android:textStyle="bold" />
                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/linearLayout3"
                android:layout_width="135dp"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:paddingTop="8dp"
                app:layout_constraintEnd_toEndOf="parent">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:orientation="horizontal"
                    android:paddingTop="1.5dp"
                    android:paddingBottom="1.5dp">

                    <ImageView
                        android:id="@+id/BondState_ImageView"
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        android:adjustViewBounds="true"
                        android:scaleType="fitCenter"
                        android:src="@drawable/round_bluetooth_disabled_white_48"
                        app:tint="@color/secondaryColor" />

                    <TextView
                        android:id="@+id/BondState_TextView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="5dp"
                        android:text="@string/dummy_bonded" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:orientation="horizontal"
                    android:paddingTop="1.5dp"
                    android:paddingBottom="1.5dp">

                    <ImageView
                        android:id="@+id/ConnectionState_ImageView"
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        android:adjustViewBounds="true"
                        android:scaleType="fitCenter"
                        android:src="@drawable/round_power_off_white_48"
                        app:tint="@color/secondaryColor" />

                    <TextView
                        android:id="@+id/ConnectionState_TextView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="5dp"
                        android:text="@string/dummy_disconnected" />
                </LinearLayout>

            </LinearLayout>


        </androidx.constraintlayout.widget.ConstraintLayout>



    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:paddingTop="1.5dp"
                android:paddingBottom="1.5dp"
                android:layout_weight="1">

                <ImageView
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:adjustViewBounds="true"
                    android:scaleType="fitCenter"
                    android:src="@drawable/round_house_white_48"
                    app:tint="@color/secondaryColor" />

                <TextView
                    android:id="@+id/CompanyIdentifier_TextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingHorizontal="5dp"
                    android:text="@string/dummy_company"
                    android:textSize="12sp"
                    android:layout_marginLeft="3dp"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:paddingTop="1.5dp"
                android:paddingBottom="1.5dp"
                android:layout_weight="1">

                <ImageView
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:adjustViewBounds="true"
                    android:scaleType="fitCenter"
                    android:src="@drawable/round_info_white_48"
                    app:tint="@color/secondaryColor" />

                <TextView
                    android:id="@+id/advertising_timestamp_TextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingHorizontal="5dp"
                    android:text="@string/dummy_timestamp"
                    android:layout_marginLeft="3dp"
                    android:textSize="12sp"/>
            </LinearLayout>


        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:paddingTop="1.5dp"
                android:paddingBottom="1.5dp"
                android:layout_weight="1">

                <ImageView
                    android:id="@+id/Connectability_ImageView"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:adjustViewBounds="true"
                    android:scaleType="fitCenter"
                    android:src="@drawable/round_power_off_white_48"
                    app:tint="@color/secondaryColor" />

                <TextView
                    android:id="@+id/Connectability_TextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingHorizontal="5dp"
                    android:text="@string/dummy_not_connectable"
                    android:layout_marginLeft="3dp"
                    android:textSize="12sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:paddingTop="1.5dp"
                android:paddingBottom="1.5dp"
                android:layout_weight="1">

                <ImageView
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:adjustViewBounds="true"
                    android:scaleType="fitCenter"
                    android:src="@drawable/round_info_white_48"
                    app:tint="@color/secondaryColor" />

                <TextView
                    android:id="@+id/legacyScan_TextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingHorizontal="5dp"
                    android:text="@string/dummy_legacy_scan"
                    android:layout_marginLeft="3dp"
                    android:textSize="12sp"/>
            </LinearLayout>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:paddingTop="7.5dp"
                android:paddingBottom="1.5dp"
                android:layout_weight="1">
                <TextView
                    android:id="@+id/advServices_tv_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:layout_marginRight="10dp"
                    android:text="Advertised Services (0)"
                    android:textColor="@color/primaryDarkColor" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

    <ListView
        android:id="@+id/serviceUUIDs_ListView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="5dp"
        android:background="@color/primaryLightColor" />
</LinearLayout>

